syntax = "proto3";
option go_package = ".;proto";
import "google/protobuf/timestamp.proto";


message VPN {
  uint32 id = 1;
  string url = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
  google.protobuf.Timestamp deleted_at = 5;
}